# yarc_os

./: .clang-format  CMakeLists.txt  Makefile  README.md  postbuild.sh
scripts/: dis.riscv  fw_jump.ddr3  fw_jump.elf  uart_program.py  yarc.dtb  yarc.dts
src/: console.c  crt0.S  csr.c  graphic_effects.c  greeting.c  link.ld  link_bootloader.ld  link_runtime.ld  main.c  peripherals.c  traps.c  uart_loader.c  utils.c  video.c
src/bootloader_srcs/: main.c
src/headers/: clint.h  console.h  csr.h  framebuffer.h  graphic_effects.h  greeting.h  led.h  master_include.h  peripherals.h  platform.h  printf.h  traps.h  uart.h  uart_16550.h  uart_loader.h  utils.h  video.h  wb32_uart.h
src/peripherals/: uart.c  uart_16550.c  wb32_uart.c
src/runtime_srcs/: main.c
